Have postgresql-common installed locally before proceeding, and build a first extension from pkg-postgresql alioth svn, namely pgmp.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ debian/*dsc
 debian/*build
 debian/*changes
 debian/*.tar.gz
+debian/pkg-postgresql/*
 pgsql/minor-versions.txt
 pgsql/*bz2
 pgsql/*md5
