--- a/pgsql/Makefile
+++ b/pgsql/Makefile
@@ -7,8 +7,7 @@ SOURCE = http://www.postgresql.org/ftp/source/
 MIRROR = http://ftp4.fr.postgresql.org/pub/mirrors/postgresql/source/
 VERSIONS = postgresql-8.3 postgresql-8.4 postgresql-9.0 postgresql-9.1
 
-PGMP_URL = https://github.com/dvarrazzo/pgmp.git
-PGMP_DEB = $(abspath ../debian/pkg-postgresql/trunk/postgresql-pgmp/debian)
+SKYTOOLS_DEB = $(abspath ../debian/divert/skytools/debian)
 
 .PHONY: setup $(VERSIONS)
 
@@ -24,12 +23,14 @@ minor-versions.txt:
 clean:
 	rm -f minor-versions.txt
 
-pgmp:
-	cd $(OUT) && (test -d $@ && (cd $@ && git pull) || git clone $(PGMP_URL) $@)
-	chmod a+x $(OUT)/$@/tools/*py
-	cd $(OUT) && tar czf postgresql-pgmp_`head -1 $(PGMP_DEB)/changelog |awk -F '[()-]' '{print $$3}'`.orig.tar.gz --exclude-vcs $@
-	rsync -Ca $(PGMP_DEB) $(OUT)/$@
+postgresql-pgmp:
 	sudo apt-get install libgmp3-dev
-	perl -pi -e "s/libgmp-dev/libgmp3-dev/" $(OUT)/$@/debian/control
-	> $(OUT)/$@/debian/patches/series
-	cd $(OUT)/$@ && debuild -us -uc -sa
+	cd $(OUT) && apt-get source $@
+	perl -pi -e "s/libgmp-dev/libgmp3-dev/" $(OUT)/$@-*/debian/control
+	cd $(OUT)/$@-* && debuild -us -uc -sa
+
+skytools:
+	sudo apt-get build-dep $@
+	cd $(OUT) && apt-get source $@
+	cp -a $(SKYTOOLS_DEB)/* $(OUT)/$@-*/debian/
+	cd $(OUT)/$@-* && debuild -us -uc -sa
