--- a/debian/debian-8.3/debian/control
+++ b/debian/debian-8.3/debian/control
@@ -31,6 +31,23 @@ Description: object-relational SQL database, version 8.3 server
  ident-server is needed if you want to authenticate remote connections
  with identd.
 
+Package: postgresql-8.3-dbg
+Section: debug
+Priority: extra
+Architecture: any
+Depends: ${misc:Depends}, postgresql-8.3 (= ${binary:Version})
+Replaces: postgresql-9.0-dbg, postgresql-9.1-dbg
+Description: debug symbols for postgresql-8.3
+ PostgreSQL is a fully featured object-relational database management
+ system.  It supports a large part of the SQL standard and is designed
+ to be extensible by users in many aspects.  Some of the features are:
+ ACID transactions, foreign keys, views, sequences, subqueries,
+ triggers, user-defined types and functions, outer joins, multiversion
+ concurrency control.  Graphical user interfaces and bindings for many
+ programming languages are available as well.
+ .
+ This package provides detached debugging symbols for PostgreSQL 8.3.
+
 Package: postgresql-client-8.3
 Architecture: any
 Depends: ${shlibs:Depends}, postgresql-client-common
