Ignore tarball contents and temporary Debian build files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
+debian/debian-?.?/.gitignore
+debian/debian-?.?/.pc/
+debian/debian-?.?/COPYRIGHT
+debian/debian-?.?/GNUmakefile.in
+debian/debian-?.?/HISTORY
+debian/debian-?.?/INSTALL
+debian/debian-?.?/Makefile
+debian/debian-?.?/README
+debian/debian-?.?/aclocal.m4
+debian/debian-?.?/config/
+debian/debian-?.?/configure
+debian/debian-?.?/configure.in
+debian/debian-?.?/contrib/
+debian/debian-?.?/doc/
+debian/debian-?.?/src/
+debian/debian-?.?/debian/*.log
+debian/debian-?.?/debian/*.substvars
+debian/debian-?.?/debian/files
+debian/debian-?.?/debian/postgresql-*/
 debian/debian-8.4
 debian/debian-9.*
 debian/common*
