--- a/jenkins/pgapt-jobs.yaml
+++ b/jenkins/pgapt-jobs.yaml
@@ -19,6 +19,10 @@
         job-name: '{name}-source'
         description: 'Build Debian source package of {name} from git.<br />Do not edit this job through the web, it is generated via jenkins-job-builder!'
         project-type: matrix
+        execution-strategy:
+                touchstone:
+                        sequential: true
+                        expr: 'distribution=="sid"'
         axes:
                 - axis:
                         type: user-defined
@@ -52,6 +56,10 @@
         job-name: '{name}-source'
         description: 'Build Debian source package of {name} from svn.<br />Do not edit this job through the web, it is generated via jenkins-job-builder!'
         project-type: matrix
+        execution-strategy:
+                touchstone:
+                        sequential: true
+                        expr: 'distribution=="sid"'
         axes:
                 - axis:
                         type: user-defined
@@ -66,6 +74,7 @@
                 - svn:
                         url: '{svn-url}'
                         basedir: source
+                        workspaceupdater: update
         publishers:
                 - archive:
                         artifacts: 'result/*'
